--- a/CSS/home.css
+++ b/CSS/home.css
@@ -55,24 +55,27 @@ body {
 }
 #social a {
     align-items: center;
-    margin-left:20%;
+    margin-left:15%;
+    margin-top:5%;
 }
 .fa {
+    background-color: rgb(15, 15, 15,0.9);
+    border-radius:20%;
     padding: 20px;
-    font-size: 50px;
-    width: 50px;
+    font-size:70px;
+    width:10%;
     text-align: center;
     text-decoration: none;
     
   }
   .fa:hover {
-    background-color: beige;
     width:10%;
     opacity:0.9;
   }
   .fa-facebook {
     
-    color: rgb(29, 54, 165);
+    color: rgb(7, 54, 245);
+    font-size:5%;
     
   }
   .fa-twitter {
@@ -81,7 +84,7 @@ body {
   }
   .fa-whatsapp {
 
-    color: rgb(25, 134, 25); 
+    color: rgb(11, 240, 11); 
   }
 footer {
     position: fixed;
