--- a/CSS/about.css
+++ b/CSS/about.css
@@ -35,6 +35,10 @@ body {
     
 
 }
+#menu cite {
+    font-size:30px;
+    margin-left:45%;
+}
 .content {
     text-align:center;
     color: rgb(14, 53, 53);
