--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -36,7 +36,7 @@ body {
     margin-left:25%;
     text-align: center;
     font-size: 50px;
-    color: blueviolet;
+    color:rgba(233, 7, 146, 0.9);
 }
 .content table  {
     border-radius: 2px;
